--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,9 @@
-name: Run Python Tests
+name: Test and Build
 
 on: [push, pull_request]
 
 jobs:
-  test:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -13,14 +13,18 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.x' 
+        python-version: '3.x'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install coverage
+        pip install coverage setuptools wheel
 
-    - name: Run tests with coverage
+    - name: Run tests and check coverage
       run: |
         coverage run -m unittest discover -s tests
         coverage report --fail-under=75
+
+    - name: Build package
+      run: |
+        python setup.py sdist bdist_wheel
