--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,30 +1,34 @@
-name: Test and Build
+name: Test, Build, Deploy
 
-on: [push, pull_request]
+on:
+  push:
+    tags:
+      - 'v*' 
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.x'
 
-    - name: Install dependencies
+    - name: Install packaging tools
       run: |
-        python -m pip install --upgrade pip
-        pip install coverage setuptools wheel
-
-    - name: Run tests and check coverage
-      run: |
-        coverage run -m unittest discover -s tests
-        coverage report --fail-under=75
+        pip install setuptools wheel
 
     - name: Build package
       run: |
         python setup.py sdist bdist_wheel
+
+    - name: Upload release to GitHub
+      uses: softprops/action-gh-release@v1
+      with:
+        files: |
+          dist/*
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
