--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,14 +27,15 @@ jobs:
       run: |
         pip install coverage
 
-    - name: Run tests and check coverage
+    - name: Run unit tests with coverage
       run: |
         coverage run -m unittest discover -s tests
         coverage report --fail-under=75
 
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     needs: test
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -53,6 +54,7 @@ jobs:
         python setup.py sdist bdist_wheel
 
     - name: Upload release to GitHub
+      if: startsWith(github.ref, 'refs/tags/v')  # only on tags
       uses: softprops/action-gh-release@v1
       with:
         files: |
