--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,25 +45,32 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Install packaging tools
+    - name: Install build tools
       run: |
-        pip install setuptools wheel
+        pip install setuptools wheel pyinstaller
 
-    - name: Build package
+    - name: Build Python package (.whl)
       run: |
         python setup.py sdist bdist_wheel
+
+    - name: Build standalone executable with PyInstaller
+      run: |
+        pyinstaller --onefile game/main.py --name ridethebus
 
     - name: Upload to GitHub Release (on tag only)
       if: startsWith(github.ref, 'refs/tags/v')
       uses: softprops/action-gh-release@v1
       with:
         files: |
-          dist/*
+          dist/*.whl
+          dist/ridethebus.exe
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Upload .whl as artifact (always)
+    - name: Upload artifacts (always)
       uses: actions/upload-artifact@v4
       with:
-        name: latest-whl
-        path: dist/*.whl
+        name: packaged-output
+        path: |
+          dist/*.whl
+          dist/ridethebus.exe
