--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
         coverage run -m unittest discover -s tests
         coverage report --fail-under=75
 
-  build-and-deploy:
+   build-and-deploy:
     runs-on: ubuntu-latest
     needs: test
 
@@ -45,9 +45,12 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Install build tools
+    - name: Install packaging tools
       run: |
         pip install setuptools wheel pyinstaller
+
+    - name: Clean old builds
+      run: rm -rf dist build *.egg-info
 
     - name: Build Python package (.whl)
       run: |
@@ -57,7 +60,7 @@ jobs:
       run: |
         pyinstaller --onefile game/main.py --name ridethebus
 
-    - name: Upload to GitHub Release (on tag only)
+    - name: Upload release to GitHub (on tag only)
       if: startsWith(github.ref, 'refs/tags/v')
       uses: softprops/action-gh-release@v1
       with:
