--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,65 +15,65 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.x'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
 
-    - name: Install test dependencies
-      run: |
-        pip install coverage
+      - name: Install test dependencies
+        run: |
+          pip install coverage
 
-    - name: Run unit tests with coverage
-      run: |
-        coverage run -m unittest discover -s tests
-        coverage report --fail-under=75
+      - name: Run unit tests with coverage
+        run: |
+          coverage run -m unittest discover -s tests
+          coverage report --fail-under=75
 
-   build-and-deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
     needs: test
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.x'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
 
-    - name: Install packaging tools
-      run: |
-        pip install setuptools wheel pyinstaller
+      - name: Install packaging tools
+        run: |
+          pip install setuptools wheel pyinstaller
 
-    - name: Clean old builds
-      run: rm -rf dist build *.egg-info
+      - name: Clean old builds
+        run: rm -rf dist build *.egg-info
 
-    - name: Build Python package (.whl)
-      run: |
-        python setup.py sdist bdist_wheel
+      - name: Build Python package (.whl)
+        run: |
+          python setup.py sdist bdist_wheel
 
-    - name: Build standalone executable with PyInstaller
-      run: |
-        pyinstaller --onefile game/main.py --name ridethebus
+      - name: Build standalone executable with PyInstaller
+        run: |
+          pyinstaller --onefile game/main.py --name ridethebus
 
-    - name: Upload release to GitHub (on tag only)
-      if: startsWith(github.ref, 'refs/tags/v')
-      uses: softprops/action-gh-release@v1
-      with:
-        files: |
-          dist/*.whl
-          dist/ridethebus.exe
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload to GitHub Release (on tag only)
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            dist/*.whl
+            dist/ridethebus.exe
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Upload artifacts (always)
-      uses: actions/upload-artifact@v4
-      with:
-        name: packaged-output
-        path: |
-          dist/*.whl
-          dist/ridethebus.exe
+      - name: Upload artifacts (always)
+        uses: actions/upload-artifact@v4
+        with:
+          name: packaged-output
+          path: |
+            dist/*.whl
+            dist/ridethebus.exe
